revised after emailing Mathieu

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -34,7 +34,7 @@
 \maketitle
 
 \begin{abstract}
-Higher inductive types can capture some concepts of differential geometry in two dimensions including connections, curvature, and vector fields. We define connections on higher inductive types. We then define tangent bundles and vector fields by looking at the special subclass of combinatorial manifolds, which are discrete in the sense of real cohesion\cite{shulman_cohesion}, drawing inspiration from the field of discrete differential geometry. We prove the Gauss-Bonnet theorem and Poincaré-Hopf theorem for combinatorial manifolds.
+Type families on higher inductive types such as pushouts can capture the homotopical properties of differential geometric constructions including connections, curvature, gauge transformations, and vector fields. We define a class of combinatorial pushouts, then define principal bundles, tangent bundles, connections, curvature, and vector fields on these. We draw inspiration in part from the young field of discrete differential geometry, and in part from the original classical proofs, which often make use of triangulations and other discrete arguments. We prove an equality relating the Gauss-Bonnet theorem to the Poincaré-Hopf theorem. We also attempt to map out future directions.\chcomment[id=Greg]{rewrote}
 \end{abstract}
 
 \begin{dedication}
@@ -54,15 +54,15 @@ This thesis is dedicated to John Baez, Sean M. Carroll, Sabine Hossenfelder, and
 \tableofcontents 
 \clearpage
 \input{discrete_gauge_theory_intro}
-\clearpage
+%\clearpage
 \input{discrete_gauge_theory_torsors}
-\clearpage
+%\clearpage
 \input{discrete_gauge_theory_combman}
-\clearpage
+%\clearpage
 \input{discrete_gauge_theory_connections}
-\clearpage
+%\clearpage
 \input{discrete_gauge_theory_vector_fields}
-\clearpage
+%\clearpage
 \input{discrete_gauge_theory_totals}
 \clearpage
 % \appendix
