--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_totals.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_totals.tex
@@ -1,4 +1,5 @@
 \section{The total construction}
+\label{sec:totals}
 \chcomment[id=Greg]{All new}
 We will place holonomy, flatness, and vector fields on the same footing, and combine them. We will prove the equivalance of the total curvature of a tangent bundle, and total index of a vector field. This is the key relationship in proving both the Gauss-Bonnet theorem and the Poincaré-Hopf theorem.
 
@@ -8,6 +9,9 @@ Given a polygon cellular type \( C_{n,0}\to C_{n,1}=C_n \), and map \( *_{C_n}:\
 \label{prop:eveq}
 Given a pointing \( b:C_n \) the evaluation map \( \ev(b):(C_n=C_n)\to C_n \) is an equivalence.
 \end{myprop}
+\begin{myproof}
+See \cite{buchholtz2023central}.\chcomment[id=Greg]{added citation}
+\end{myproof}
 
 Consider the cellular type \( \mm_0\to\mm_1\to\mm \) with point \( m:\mm \). Consider a loop \( \ell:m=_\mm m \) with proof of contractibility \( f:\ell=\refl_m \). For example, we may have a face \( F \) in a combinatorial realization, with \( m \) a vertex of \( F \) and \( \ell=\partial F \) the boundary loop. We have accumulated the following constructions:
 \[\begin{aligned}
@@ -25,7 +29,7 @@ X_E(\ell)&:\tr(\ell)=_{Tm=Tm}\id\\
 \]
 These last two can be concatenated to make a loop.
 \begin{mydef}
-The \defemph{index of the vector field \( X \) around the loop \( \ell \)} is the integer \( I_X(\ell):\flat(\ell)^{-1}\cdot X_E:\id=_{Tm=Tm}\id \).
+The \defemph{index of the vector field \( X \) around the loop \( \ell \)} is the integer \( I_X(\ell)\defeq\flat(\ell)^{-1}\cdot X_E:\id=_{Tm=Tm}\id \).
 \end{mydef}
 \begin{mynote}
 Classically the index around a loop makes use of a trivialization of the tangent bundle, and does not take place in the presence of a connection. We know from section~\ref{sec:localtriv} that the connection can serve as such a trivialization. Taking that point of view, the formula constitutes the difference between the swirling of the vector field inside the chart, and the twisting of the chart itself. 
@@ -42,7 +46,7 @@ I_X(\ell)&:\id=_{Tm=Tm}\id\\
 \end{equation}
 
 \subsection{Cancellations}
-The next observation is that we can relate the quantities in \ref{eq:face_elements} at different points around a cellular surface by making use of the automorphism bundle \( \sit{x:\mm}(Tx=Tx) \) and its trivialization \( \tau:\pit{x:M}(Tx=Tx)\xrightarrow[]{\simeq}(Tm=Tm) \) as in Lemma~\ref{lem:gauge_triv}.
+The next observation is that we can relate the quantities in Equation~\ref{eq:face_elements} at different points around a cellular surface by making use of the automorphism bundle \( \sit{x:\mm}(Tx=Tx) \) and its trivialization \( \tau:\pit{x:M}(Tx=Tx)\xrightarrow[]{\simeq}(Tm=Tm) \) as in Lemma~\ref{lem:gauge_triv}. We will use the action on paths of \( \tau \) to better understand \( \flat \) and \( X_E \) as \emph{angles}.
 
 \begin{mydef}
 Consider the contractible type \( \sit{\alpha:Tm=Tm}\alpha=\id \) with the addition law \( (\alpha, p)+(\beta, q) = (\alpha\cdot\beta, p\cdot \alpha(q)) \) where \( \alpha(q):\alpha=\alpha\cdot\beta \) (using concatenation notation instead of function composition). This is a commutative group with identity \( \refl_\id \) which we call the \defemph{type of angles of \( Tm \)}.
@@ -51,9 +55,9 @@ Consider the contractible type \( \sit{\alpha:Tm=Tm}\alpha=\id \) with the addit
 \begin{mylemma}
 \( \tau\circ X \) maps concatenation of paths to the commutative operation \( + \) in the type of angles \( \sit{\alpha:Tm=Tm}\alpha=\id \).
 \end{mylemma}
-\begin{proof}
+\begin{myproof}
 Suppose we have \( p:x=_\mm y \) and \( q:y=_\mm z \). Then \( X(p\cdot q)=\tr(q)(X(p))\cdot X(q) \) which is exactly the operation \( + \) but in the group \( \sit{\alpha:Tz=Tz}\alpha=\id \). We can then transport the result to \( m \) by an arbitrary path.
-\end{proof}
+\end{myproof}
 
 \begin{mycor}
 \label{cor:x_cancel}
@@ -65,9 +69,9 @@ So under \( \tau \) we can cancel the contributions to \( X \) from the edge \( 
 \begin{mylemma}
 With \( e, p, \ell \) as in Figure~\ref{fig:lasso}, we have \( \tau(\tr(e\cdot\ell\cdot e^{-1}))=\tau(\tr(\ell)) \).
 \end{mylemma}
-\begin{proof}
+\begin{myproof}
 Recall that \( \tau \) conjugates automorphisms by transport along some arbitrary path to \( m \). To transport automorphisms from \( x \) to \( p \), choose a path \( p:m=_\mm x \). Then make the specific choice \( p\cdot e:m=_\mm y \) to transport automorphisms from \( y \) to \( p \). Then \( \tau(\tr(e\cdot\ell\cdot e^{-1})) \) and \( \tau(\tr(\ell)) \) both compute to \( \tr((p\cdot e)\cdot\ell\cdot(p\cdot e)^{-1}) \). 
-\end{proof}
+\end{myproof}
 
 \begin{figure}[h]
 \centering
@@ -101,7 +105,7 @@ A \defemph{total enumeration of faces} for a combinatorial 2-manifold \( \mm \) 
 \begin{enumerate}
 \item A ``master basepoint'' \( m:M_0 \).
 \item For each face \( F:M_2 \) with vertices \( \{v_{F,1}, v_{F,2}, v_{F,3}\} \) an enumeration of its vertices \( [v_{F,1}, v_{F,2}, v_{F,3}] \), including the choice of the first vertex in the enumeration as the basepoint of \( F \), which is \defemph{globally compatible} with the choices for the other faces, meaning that when two faces \( F_1,F_2 \) share an edge \( \{v, w\} \), then one of the faces includes the sublist \( [v, w] \) and the other includes \( [w, v] \).
-\item An ordering of the faces \( [F_1,\ldots,F_n] \).
+\item An ordering of the faces \( [F_1,\ldots,F_n] \).\chcomment[id=Greg]{Removed the tail of the lasso}
 \end{enumerate}
 Two enumerations that differ only in the ordering of vertices (2.) are said to have the \defemph{same orientation} if it is true for every face that the two orderings of vertices differ by an even orientation.
 \end{mydef}
@@ -119,7 +123,7 @@ The \defemph{total path} of an enumeration is the list \( \ell_{F_1},\ldots,\ell
 \end{mydef}
 
 \begin{mydef}
-Using \ref{eq:face_elements} we can define the \defemph{total curvature}, \defemph{total swirling} and \defemph{total index} of a total path as follows:
+Using Equation~\ref{eq:face_elements} we can define the \defemph{total curvature}, \defemph{total swirling} and \defemph{total index} of a total path as follows:
 \begin{equation}
 \label{eq:total_elements}
 \begin{aligned}
@@ -139,9 +143,9 @@ The total path of an enumeration visits each edge an even number of times, equal
 \begin{mythm}
 \( \tau(X(\ell_{F_1}))\cdots\tau(X(\ell_{F_n}))=\refl \) in \( \sit{\alpha:Tm=Tm}\alpha=\id \). 
 \end{mythm}
-\begin{proof}
+\begin{myproof}
 Immediate from Lemma~\ref{lem:edges_cancel} and Corollary~\ref{cor:x_cancel}.
-\end{proof}
+\end{myproof}
 
 \begin{mycor}
 The total index is equal to the opposite of the total curvature. The total curvature is an integer.
