moved future work to the end; added a placeholder section for the total curvature and total index on the octahedron; played with fonts

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -1,14 +1,14 @@
 \documentclass[12pt,fleqn]{article}
 \usepackage{greg}
-\usepackage[baskerville,vvarbb]{newtxmath}
+\usepackage[vvarbb]{newtx}
 \usepackage{fontspec}
 \usepackage{titlesec}
 \usepackage{titling}
 \usepackage[nottoc]{tocbibind}
 \usepackage{fancyvrb}
-\setmainfont{Baskerville}
-\setsansfont{Quadrat-Serial}
-\setmonofont{Courier New}
+%\setmainfont{Baskerville}
+%\setsansfont{Quadrat-Serial}
+%\setmonofont{Courier New}
 \urlstyle{rm}
 \usepackage[font=footnotesize,labelfont=bf]{caption}
 
