--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_totals.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_totals.tex
@@ -150,3 +150,10 @@ Immediate from Lemma~\ref{lem:edges_cancel} and Corollary~\ref{cor:x_cancel}.
 \begin{mycor}
 The total index is equal to the opposite of the total curvature. The total curvature is an integer.
 \end{mycor}
+
+\subsection{Total curvature and index on the sphere}
+
+\subsection{Future directions}
+Euler characteristic. Chern-Weil theory. Atiyah bundle. Space of connections is contractible. Formalization.
+
+The results of this note can be extended in many directions. There are higher-dimensional generalizations of Gauss-Bonnet, including the theory of characteristic classes and Chern-Weil theory (which links characteristic classes to connections and curvature). These would involve working with nonabelian groups like \( SO(n) \) and sphere bundles. Results from gauge theory could be imported into HoTT, as well as results from surgery theory and other topological constructions that may be especially amenable to this discrete setting. Relationships with computer graphics and discrete differential geometry\cite{crane_ddg}\cite{crane_connections} could be explored. Finally, a theory that reintroduces smoothness could allow more formal versions of the analogies explored here. 
